objects/MC4SF__MC_Merge_Variable__c.object
<CustomObject>
    <fields>
        <fullName>MC4SF__Choices__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For radio and dropdown field types, an array of the options available</inlineHelpText>
        <label>Choices</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MC4SF__Contact_Field_Mapping__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Field Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Default_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The default value the list owner has set for this field</inlineHelpText>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Field_Type__c</fullName>
        <inlineHelpText>The &quot;data type&quot; of this merge var.</inlineHelpText>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>email</fullName>
                </value>
                <value>
                    <fullName>text</fullName>
                </value>
                <value>
                    <fullName>number</fullName>
                </value>
                <value>
                    <fullName>radio</fullName>
                </value>
                <value>
                    <fullName>dropdown</fullName>
                </value>
                <value>
                    <fullName>date</fullName>
                </value>
                <value>
                    <fullName>address</fullName>
                </value>
                <value>
                    <fullName>phone</fullName>
                </value>
                <value>
                    <fullName>url</fullName>
                </value>
                <value>
                    <fullName>imageurl</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC4SF__Lead_Field_Mapping__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Field Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_List__c</fullName>
        <label>MC Audience</label>
        <referenceTo>MC4SF__MC_List__c</referenceTo>
        <relationshipLabel>MC Merge Variables</relationshipLabel>
        <relationshipName>MC_Merge_Variables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MC4SF__MailChimp_ID__c</fullName>
        <label>MailChimp ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Order__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The order the list owner has set this field to display in</inlineHelpText>
        <label>Order</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Public__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether or not this field is visible to list subscribers</inlineHelpText>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__SFDC_Data_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Show__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether the list owner has this field displayed on their list dashboard</inlineHelpText>
        <label>Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Size__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The width of the field to be used</inlineHelpText>
        <label>Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Tag__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The merge tag that&apos;s used for forms and MailChimp API calls.</inlineHelpText>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>